# text-adventure

./: .gitignore  LICENSE  README.md  Setup.hs  text-adventure.cabal
src/: Game.hs  GameLoop.hs  Main.hs  Parser.hs  Types.hs
test/: Tests.hs
