-- | Cabal configuration for the Haskell Text Adventure Game
name:                text-adventure
version:             0.1.0.0
synopsis:            A simple text-based adventure game engine written in Haskell

-- A longer description of the package.
description:         A simple text-based adventure game engine written in Haskell. This package provides a flexible framework for creating interactive text adventures with rooms, items, NPCs, and player commands.

-- URL for the project homepage or repository.
homepage:            https://github.com/zeroclaw/text-adventure

-- The license under which the package is released.
license:             MIT
license-file:        LICENSE

-- The package author(s).
author:              ZeroClaw
maintainer:          zeroclaw@example.com

-- A copyright notice.
copyright:           2026 ZeroClaw

-- Category of the package.
category:            Game

-- Extra files to be distributed with the package, such as examples or a README.
extra-source-files:
    README.md
    CHANGELOG.md

-- Language extension flags for the compiler.
ghc-options:         -Wall -Werror

-- Modules included in this package.
exposed-modules:
    Main
    Game
    GameLoop
    Parser
    Types

-- Language dependencies on other packages.
build-depends:
    base >=4.12 && <5,
    containers >=0.6 && <0.7

-- Modules not exported by this package.
other-modules:

-- Additional library directories to search for external libraries.
extra-lib-dirs:

-- Additional directories to search for header files.
extra-include-dirs:

-- Additional frameworks to link with (only on macOS).
extra-frameworks-dirs:

-- Test suite configuration.
Test-Suite test-text-adventure
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       text-adventure, base, containers
  default-language:    Haskell2010

-- Benchmark configuration.
Benchmark benchmark-text-adventure
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  hs-source-dirs:      bench
  build-depends:       text-adventure, base, criterion
  default-language:    Haskell2010

-- Default language for the package.
default-language:    Haskell2010

source-repository head
type:     git
location: https://github.com/zeroclaw/text-adventure.git