cabal-version:       3.0
name:                text-adventure
version:             0.1.0.0
synopsis:            A simple text-based adventure game engine written in Haskell
description:         A simple text-based adventure game engine written in Haskell. This package provides a flexible framework for creating interactive text adventures with rooms, items, NPCs, and player commands.
homepage:            https://github.com/zeroclaw/text-adventure
license:             MIT
license-file:        LICENSE
author:              ZeroClaw
maintainer:          zeroclaw@example.com
copyright:           2026 ZeroClaw
category:            Game
extra-source-files:
    README.md
    CHANGELOG.md

executable text-adventure
  main-is:             Main.hs
  other-modules:       Game, GameLoop, Parser, Types
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <5,
                       containers >=0.6 && <0.7,
                       aeson >=2.0 && <3,
                       aeson-pretty >=0.8 && <1,
                       bytestring >=0.10 && <1,
                       text >=1.2 && <3
  default-language:    Haskell2010
  ghc-options:         -Wall